# pulsar-cli

./: Cargo.toml  README.md  TODO
spike/: consumer.rs  producer.rs
src/: client.rs  commands.rs  common.rs  io.rs  main.rs  message.rs  pulsarctl.rs
src/commands/: attach.rs  detach.rs  publish.rs  search.rs  watch.rs
testing/: commands.txt  docker-compose.yaml  publish_test_messages.py  pulsar_cluster_management.sh  search_for_message.py
