[package]
name = "pulsar-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
colored_json = "5.0.0"
env_logger = "0.10.0"
futures = "0.3"
pulsar = "5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
uuid = "1.15.1"
